observability/base/kubernetes-event-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-event-exporter-metrics
  labels:
    app.kubernetes.io/instance: kubernetes-event-exporter
    app.kubernetes.io/name: kubernetes-event-exporter
    app.kubernetes.io/component: metrics
  annotations:
    prometheus.io/port: "2112"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 2112
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: kubernetes-event-exporter
    app.kubernetes.io/name: kubernetes-event-exporter
    app.kubernetes.io/component: kubernetes-event-exporter
