observability/base/kubernetes-event-exporter/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubernetes-event-exporter
  labels:
    app.kubernetes.io/instance: kubernetes-event-exporter
    app.kubernetes.io/name: kubernetes-event-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes-event-exporter
      app.kubernetes.io/name: kubernetes-event-exporter
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 2112
